--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Supplier Management System for Quality Management",
   "main": "server.js",
   "scripts": {
-    "dev": "tsc && node server.js",
-    "build": "tsc && sass src/styles/main.scss public/css/main.css",
-    "start": "node server.js"
+    "build": "npm run build:ts && npm run build:css",
+    "build:ts": "tsc && tsc --project tsconfig.client.json",
+    "build:css": "sass src/styles/main.scss public/css/main.css",
+    "dev": "npm run build && node dist/server.js",
+    "start": "node dist/server.js",
+    "prebuild": "mkdir -p public/css public/js dist"
   },
   "keywords": ["qms", "supplier-management", "htmx", "typescript"],
   "author": "",
